--- a/RAD_Assignment/Views/Home/Index.cshtml
+++ b/RAD_Assignment/Views/Home/Index.cshtml
@@ -1,31 +1,21 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿<div class="main">
+    <div class="col-md-3 panel">
+        <div class="panel-heading"><h1>Customers</h1></div>
+        <div class="panel-body" data-bind="template: {  foreach:customers }">
+            <div href="#" class="btn btn-sq-lg btn-primary col-md-10 col-md-offset-1 customers">
+                <h2><span class="details" data-bind="text:FirstName"></span> <span data-bind="text:LastName" class="details"></span></h2>
+                <strong>DOB:</strong><span data-bind="text: moment(DOB).format('DD-MMMM-YYYY')"></span>
+                <hr />
+                <div>
+                    <button class="btn btn-danger btn-xs">delete</button>
+                    <button class="btn btn-info btn-xs">Edit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/Index")
 }
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
