--- a/RAD_Assignment/Content/Site.css
+++ b/RAD_Assignment/Content/Site.css
@@ -1,12 +1,13 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    height: 100%;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 0px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -22,36 +23,74 @@ select,
 textarea {
     max-width: 280px;
 }
-.panel
-{
-    padding:0px;
-    border-right:ridge;
-    border-color:cadetblue;
-    border-left:none;
-    border-bottom:none;
-    border-top:none;
-    height:100%;
+
+.allCustomers {
+    padding: 0px;
+    padding-bottom: 20px;
+    border-right: solid;
+    border-color: cadetblue;
+    border-left: none;
+    border-bottom: solid;
+    border-top: none;
+    height: 100%;
+    background-color: azure;
 }
-.panel-heading{
-    background-color:cadetblue;
-    text-align:center;
-    color:white;
-    text-decoration:wavy;
+
+.panel-heading {
+    background-color: cadetblue;
+    text-align: center;
+    color: white;
 }
-.panel-heading h1{
-    text-shadow: 2px 2px #ff0000;
+
+.bookings {
+    padding: 0px;
+    padding-right: 0px;
 }
-.container-fluid{
-    padding-left:0px;
-    height:100%;
+
+.panel-heading h1 {
+    text-shadow: 2px 2px #808080;
+}
+
+.panel-body {
+    padding-bottom: 55px;
+}
+
+.container-fluid {
+    padding-left: 0px;
+    height: 100%;
+}
+
+#CreateCustomer {
+    margin-top: 20px;
 }
 
 .customers {
-    margin-bottom:20px;
-    background-color:khaki;
-    color:black;
-    border:none;
+    margin-bottom: 20px;
+    background-color: khaki;
+    color: black;
+    border: none;
 }
-.customers:hover{
-    background-color:gainsboro!important;
+
+    .customers:hover {
+        background-color: burlywood;
+        color: black;
+    }
+
+.createbtn {
+    margin-top: 10px;
+}
+
+#AllBookings h2, #NewBooking h2 {
+    text-align: center;
+    color: blue;
+}
+.list-group
+{
+    margin-top:20px;
+}
+.img-responsive
+{
+    max-height:250px;
+    margin-top:10px;
+    margin-bottom:15px
 }
