--- a/RAD_Assignment/Views/Home/Index.cshtml
+++ b/RAD_Assignment/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
                 <strong>DOB:</strong><span data-bind="text: moment(DOB).format('DD-MMMM-YYYY')"></span>
                 <hr />
                 <div>
-                    <button class="btn btn-danger btn-xs">delete</button>
+                    <button class="btn btn-danger btn-xs" data-bind="click:$parent.showModalDelete" >Delete</button>
                     <button class="btn btn-info btn-xs">Edit</button>
                 </div>
             </div>
@@ -35,7 +35,8 @@
                 </div>
             </div>
         </form>
-        <button class="btn btn-info col-md-offset-3" data-bind="click: CreateNewCustomer" id="crteCust">Create New Customer</button>
+        <button class="btn btn-info btn-sm col-md-offset-2" data-bind="click: CreateNewCustomer" id="crteCust">Create New Customer</button>
+        <button class="btn btn-sm btn-danger" data-bind="click: CancelCreateCustomer" id="crteCust">Cancel</button>
     </div>
     @*-----------------Bookings Div------------------------*@
     <div class="col-md-9 bookings">
@@ -50,10 +51,9 @@
                         <label>Country:</label><span data-bind="text:Country"></span><br />
                         <label>City:</label><span data-bind="text:City"></span><br />
                         <label>Booking Date:</label><span data-bind="text:moment(BookingDate).format('DD-MMMM-YYYY')"></span><br /><br />
-                        <button class="btn btn-danger" data-bind="click:$parent.DeleteBooking ">Cancel Booking</button>
+                        <button class="btn btn-danger" data-bind="click:$parent.showModal ">Cancel Booking</button>
                     </div>
                     <div class="map" data-bind="googlemap: { latitude: Latitude, longitude: Longitude }"></div>
-
                 </div>
             </div>
         </div>
@@ -66,6 +66,7 @@
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li><a href="#">Ireland</a></li>
                     <li><a href="#">New Zealand</a></li>
                     <li><a href="#">United States</a></li>
                     <li><a href="#">United Kingdom</a></li>
@@ -110,7 +111,47 @@
 
     </div>
 </div>
-
+@*Modal for canceling Delete of Booking*@
+<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header panel-heading">
+            </div>
+            <div>
+                <div class="panel">
+                    <h3 style="text-align:center">Are you sure you want to delete this booking</h3>
+                </div>
+            </div>
+            <div class="modal-footer panel-heading">
+                <button id="confirmDelete" class="btn btn-sm btn-success" data-bind="click:DeleteBooking">Confirm</button>
+                <button class="btn btn-sm btn-danger" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+@*Modal for canceling Delete of Customer*@
+<div class="modal fade" id="deleteCust" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header panel-heading">
+            </div>
+            <div>
+                <div class="panel">
+                    <h3 style="text-align:center">Are you sure you want to delete this Customer</h3>
+                </div>
+            </div>
+            <div class="modal-footer panel-heading">
+                <button id="confirmDelete" class="btn btn-sm btn-success" data-bind="click:DeleteCustomer">Confirm</button>
+                <button class="btn btn-sm btn-danger" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<div id="ajaxloader"></div>
 
 @section scripts
 {
