--- a/RAD_Assignment/Content/Site.css
+++ b/RAD_Assignment/Content/Site.css
@@ -119,4 +119,27 @@ hr {
 {
     background-color:#3fb0ac; 
 }
+#ajaxloader
+{
+    margin-top:100px;
+    top:10% ;
+    left:56%;
+	position: absolute;
+	width: 60px;
+	height: 60px;
+	border: 8px solid #173e43;
+	border-right-color: transparent;
+	border-radius: 50%;
+	box-shadow: 0 0 25px 2px #173e43;
+}
+#ajaxloader
+{
+	animation: spin 1s linear infinite;
+}
+@keyframes spin
+{
+	from { transform: rotate(0deg);   opacity: 0.2; }
+	50%  { transform: rotate(180deg); opacity: 1.0; }
+	to   { transform: rotate(360deg); opacity: 0.2; }
+}
 
